working docker build and containers

--- a/ui-svc/src/main/resources/static/index.html
+++ b/ui-svc/src/main/resources/static/index.html
@@ -94,6 +94,11 @@
 							<td></td>
 							<td><a href="/disco">/disco</a></td>
 						</tr>
+            <tr>
+							<td>Hystrix Stream</td>
+							<td></td>
+							<td><a href="/hystrix">/hystrix</a></td>
+						</tr>
 						<tr>
 							<td>Hello</td>
 							<td></td>
