finalized working copy of the V1 cluster demo

--- a/ui-svc/src/main/resources/static/index.html
+++ b/ui-svc/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
   <style>
     html {
-      height: 100%;
+      height: 150%;
     }
 
     body {
@@ -95,9 +95,19 @@
 							<td><a href="/disco">/disco</a></td>
 						</tr>
             <tr>
-							<td>Hystrix Stream</td>
+							<td>Zipkin Dashboard</td>
+							<td></td>
+							<td><a href="/zipkin">/zipkin</a></td>
+						</tr>
+            <tr>
+							<td>Hystrix Dashboard</td>
 							<td></td>
 							<td><a href="/hystrix">/hystrix</a></td>
+						</tr>
+            <tr>
+							<td></td>
+							<td>Use this stream</td>
+							<td><a href="/actuator/hystrix.stream">hystrix.stream</a></td>
 						</tr>
 						<tr>
 							<td>Hello</td>
